only overflow scroll vertically for search results table, lower height to prevent clipping

--- a/src/components/search/search-results/search-results-styles.css
+++ b/src/components/search/search-results/search-results-styles.css
@@ -6,8 +6,8 @@
 #table-container{
     margin-top: 5vh;
     width:98vw;
-    overflow: scroll;
-    height:100vh;
+    overflow-y: scroll;
+    height:65vh;
 }
 .result-entry-card{
     background-color:#222222 !important;
